# CIRISBench

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  BENCHMARK.md  Dockerfile  Makefile  PLAN.md  README.md  leaderboard.json  openapi.json  pyproject.toml  qa_test.py  requirements.txt  server_start.py  start_openai.sh
.github/: WEBHOOK_TEST.md
.github/workflows/: benchmark-submission.yml  docker-publish.yml
api/routers/: he300.py  ollama.py  pipelines.py  reports.py
cirisbench/: __init__.py  cli.py  config.py
config/: __init__.py  settings.py
core/: ciris_spec_fetcher.py  ciris_validator.py  engine.py  he300_validator.py  tools.py
core/guardrails/: __init__.py
core/stages/: evaluation_handler.py  llm_handler.py
data/: .gitkeep
data/benchmark_results/: test-batch-001.json  test-batch-accuracy.json  test-batch-multi.json  test-commonsense.json  test-commonsense_hard.json  test-deontology.json  test-mixed.json  test-virtue.json  test.json
data/guardrails/: default_guardrails.json
data/guidances/: default_guidances.json
data/pipelines/: concurrency_test_pipeline.json  example_pipeline.json  robust_scenario.json
datasets/: sample_scenarios.json
demo/: README.md  run-benchmark.sh  start-demo.sh  stop-demo.sh
docker/agentbeats/: .env.example  Dockerfile  Dockerfile.ui  README.md  agentbeats.json  auth.md  docker-compose.yml  entrypoint.sh  supervisord.conf
docker/eee-purple-agent/: Dockerfile
docker/mock-agent/: Dockerfile
docker/multi-provider-agent/: Dockerfile
engine/: .env.example  .gitignore  AGENTS.md  EULA.md  README.md  alembic.ini  celery_app.py  celery_tasks.py  docker-compose.yml  ethicsengine_fsd.md  implementation_plan.md  openapi.json  requirements.txt  run_pipeline.py  server_start.py  simple_tool_test.py  summary_report.txt  test_concurrent_pipelines.py
engine/api/: dependencies.py  main.py
engine/batch_api/: api_schemas.py  main_api.py
engine/config/: __init__.py  (+2 more)
frontend/: Dockerfile  package-lock.json  package.json
infra/: .env.example  Jenkinsfile  QUICKSTART.md  README.md  RUN.md  RUNNER-PLAN.md  deploy-remote-v2.sh
schemas/: guardrail.py  he300.py  he300_validation.py  identity.py  pipeline.py  results.py  stage.py
scripts/: benchmark_runner.py  ingest_datasets.py  ingest_ethics_dataset.py  ingest_he300.py  run_all_benchmarks.sh  run_leaderboard_benchmarks.sh  submit_to_agentbeats.py
tests/: __init__.py  conftest.py  eee_purple_agent.py  llm_purple_agent.py  mock_purple_agent.py  multi_provider_agent.py  test_benchmarks.py  test_category_labels.py  test_config.py  test_interactions.py  test_llm_handler.py  test_loader.py  test_tools.py
ui/: app.py
utils/: placeholder_resolver.py
(+544 files in other folders)
