[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cirisbench"
version = "0.1.0"
description = "Benchmarking and evaluation infrastructure for CIRIS AI agents"
readme = "README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "CIRIS AI", email = "dev@ciris.ai" }
]
keywords = ["ai", "benchmarking", "ethics", "evaluation", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi==0.115.12",
    "starlette==0.41.3",
    "uvicorn[standard]==0.32.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "pandas>=2.1.0",
    "ujson>=5.9.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "alembic>=1.13.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
llm = [
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "ollama>=0.1.0",
    "langsmith>=0.1.0",
    "langchain-core>=0.1.0",
]
all = ["cirisbench[dev,llm]"]

[project.urls]
Homepage = "https://github.com/CIRISAI/CIRISBench"
Documentation = "https://github.com/CIRISAI/CIRISBench#readme"
Repository = "https://github.com/CIRISAI/CIRISBench.git"
Issues = "https://github.com/CIRISAI/CIRISBench/issues"

[project.scripts]
cirisbench = "cirisbench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cirisbench", "engine"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests", "engine/tests", "infra/tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["cirisbench", "engine"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
